--- a/VS code CV.html
+++ b/VS code CV.html
@@ -102,7 +102,7 @@
 
                 <div class="w3-container w3-card w3-white w3-margin-bottom">
                     <h2 class="w3-text-grey w3-padding-16"><i
-                            class="fa fa-asterisk fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About Me
+                            class="fa fa-asterisk fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About Myself
                         <div class="w3-container">
                             </h6>
                             <p>I have a drive to work in IT and a passion to learn as much as I can to help me
