--- a/index.html
+++ b/index.html
@@ -106,12 +106,19 @@
                         <div class="w3-container">
                             </h6>
                             <p>I have a drive to work in IT and a passion to learn as much as I can to help me
-                                succeed. I'm a knowledgeable professional on the systems I use. I offer
+                                succeed. I'm a knowledgeable professional. I offer
                                 problem-solving skills and best practices
-                                expertise. Thorough with assessments, solution development, and deployments.
-                                Accomplished in partnering cross-functionally to enhance systems for changing demands.
-                                Adaptable with extensive experience providing first-class results. Meets job demands and
-                                deadlines through diligent work-ethic and dedication to quality.</p>
+                                expertise. If I do not know the solution to a problem I will go out of my way to learn
+                                the solution and be prepared in the future. I'm thorough with assessments, solution
+                                development, and deployments.
+                                I'm accomplished in partnering cross-functionally to enhance systems for changing
+                                demands.
+                                I'm adaptable with extensive experience providing first-class results. I meet job
+                                demands and
+                                deadlines through diligent work-ethic and dedication to quality. In my spare time I
+                                enjoy learning skills and putting them into practice, including building and upgrading
+                                my
+                                own gaming PC and a lot of gaming on it afterwards. </p>
                         </div>
                         <div class="w3-container w3-card w3-white w3-margin-bottom">
                             <h2 class="w3-text-grey w3-padding-16"><i
