--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             Assistant</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Chorley, Lancashire</p>
                         <p><i
-                                class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>ryanoceros92@hotmail.com
+                                class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>ryan.burns.1992@outlook.com
                         </p>
                         <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>07475571757</p>
                         <hr>
